feat: Add OCR and MCQ scanning scripts, exam data, question/answer images, and update web assets.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <div class="control-group">
                 <label for="quiz-select">Bộ đề:</label>
                 <select id="quiz-select">
-                    <option value="k75_76.json">K75 + K76 (Đầy đủ)</option>
-                    <option value="75.json">K75</option>
-                    <option value="k76.json">K76</option>
+                    <option value="exam/chuong_1.json">Chương 1</option>
+                    <option value="exam/chuong_2.json">Chương 2</option>
                 </select>
             </div>
             <div class="control-group">
