--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <span class="tab-icon">🏠</span>
                     <span class="tab-text">Trang chủ</span>
                 </button>
-                <button class="nav-tab" data-tab="study">
-                    <span class="tab-icon">📖</span>
-                    <span class="tab-text">Học tập</span>
-                </button>
+                <div class="nav-tab" data-tab="study">
+                    <i class="fas fa-robot tab-icon"></i>
+                    <span class="tab-text">Học tập cùng AI</span>
+                </div>
                 <button class="nav-tab" data-tab="flashcard">
                     <span class="tab-icon">🎴</span>
                     <span class="tab-text">Flashcard</span>
@@ -107,52 +107,27 @@
             </div>
         </section>
 
-        <!-- SMART STUDY TAB -->
+        <!-- STUDY TAB -->
         <section class="tab-content" id="study-tab">
             <div class="container">
                 <div class="study-header">
-                    <h2>📖 Học Tập Thông Minh</h2>
+                    <div class="header-left">
+                        <h2>🤖 Học Tập Cùng AI</h2>
+                        <span class="ai-badge">✨ Model: Gemini 3.0 Pro</span>
+                    </div>
                     <div class="study-controls">
                         <select id="study-chapter-select">
                             <option value="all">Tất cả chương</option>
-                            <option value="exam/chuong_1.json">Chương 1</option>
-                            <option value="exam/chuong_2.json">Chương 2</option>
-                            <option value="exam/chuong_3.json">Chương 3</option>
+                            <option value="1">Chương 1: Triết học và vai trò</option>
+                            <option value="2">Chương 2: Chủ nghĩa duy vật BC</option>
+                            <option value="3">Chương 3: Chủ nghĩa duy vật LS</option>
                         </select>
                     </div>
                 </div>
 
-                <div class="study-tabs">
-                    <button class="study-tab active" data-study="timeline">
-                        📅 Trục thời gian
-                    </button>
-                    <button class="study-tab" data-study="compare">
-                        ⚖️ So sánh khái niệm
-                    </button>
-                    <button class="study-tab" data-study="keywords">
-                        🔑 Từ khóa quan trọng
-                    </button>
-                </div>
-
-                <!-- Timeline View -->
-                <div class="study-view active" id="timeline-view">
-                    <div class="timeline-container" id="timeline-container">
-                        <p class="loading-text">Đang phân tích dữ liệu...</p>
-                    </div>
-                </div>
-
-                <!-- Compare View -->
-                <div class="study-view" id="compare-view">
-                    <div class="compare-container" id="compare-container">
-                        <p class="loading-text">Đang tìm kiếm các cặp khái niệm đối lập...</p>
-                    </div>
-                </div>
-
-                <!-- Keywords View -->
-                <div class="study-view" id="keywords-view">
-                    <div class="keywords-container" id="keywords-container">
-                        <p class="loading-text">Đang trích xuất từ khóa...</p>
-                    </div>
+                <div class="topics-container" id="topics-container">
+                    <!-- Topics will be rendered here by JavaScript -->
+                    <p class="loading-text">Đang tải nội dung...</p>
                 </div>
             </div>
         </section>
@@ -303,6 +278,7 @@
         ⌨️ <kbd>1-4</kbd> chọn đáp án | <kbd>Enter</kbd> tiếp tục | <kbd>H</kbd> gợi ý
     </div>
 
+    <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
 
