feat: introduce study page with topic listing, detailed content, video playback, and integrated practice options.

--- a/exam.html
+++ b/exam.html
@@ -166,6 +166,7 @@
                 Xuất sắc!
             </div>
             <div class="result-actions">
+                <button class="action-btn hidden" id="back-to-study-btn">📖 Quay lại học tập</button>
                 <button class="action-btn" id="review-wrong-btn">📝 Ôn lại câu sai</button>
                 <button class="action-btn primary" id="modal-restart-btn">🔄 Làm lại</button>
             </div>
