feat: Add new chapter data files, enhance explanation text cleaning patterns, and update exam chapter counts in the UI.

--- a/exam.html
+++ b/exam.html
@@ -55,10 +55,10 @@
                     <h2 id="exam-title">📝 Thi Trắc Nghiệm</h2>
                     <div class="exam-controls">
                         <select id="exam-chapter-select">
-                            <option value="all">📚 Tất cả chương</option>
-                            <option value="exam/chuong_1.json">📘 Chương 1</option>
-                            <option value="exam/chuong_2.json">📗 Chương 2</option>
-                            <option value="exam/chuong_3.json">📙 Chương 3</option>
+                            <option value="all">📚 Tất cả chương (348 câu)</option>
+                            <option value="exam/chuong_1.json">📘 Chương 1 (50 câu)</option>
+                            <option value="exam/chuong_2.json">📗 Chương 2 (148 câu)</option>
+                            <option value="exam/chuong_3.json">📙 Chương 3 (150 câu)</option>
                         </select>
                         <input type="checkbox" id="shuffle-answers-toggle" checked>
                         <span>🔀 Trộn đáp án</span>
