Update app content for Pháp Luật Đại Cương subject
Changed all references from 'Triết Học Mác-Lênin' to 'Pháp Luật Đại Cương' across HTML files and UI text. Updated chapter/topic counts and descriptions to match the new subject. Adjusted chapter selection and data loading logic in JavaScript to support the new structure and removed hardcoded chapter options. Updated footer credits to reflect the new institution.

--- a/exam.html
+++ b/exam.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thi Thử | Triết Học Mác-Lênin</title>
-    <meta name="description" content="Thi thử trắc nghiệm Triết học Mác-Lênin">
+    <title>Thi Thử | Pháp Luật Đại Cương</title>
+    <meta name="description" content="Thi thử trắc nghiệm Pháp luật đại cương">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-content">
-            <a href="index.html" class="logo">📚 Triết Học Mác-Lênin</a>
+            <a href="index.html" class="logo">⚖️ Pháp Luật Đại Cương</a>
             <button class="menu-toggle" id="menu-toggle" title="Menu">☰</button>
             <nav class="main-nav">
                 <a href="index.html" class="nav-tab">
@@ -55,10 +55,7 @@
                     <h2 id="exam-title">📝 Thi Trắc Nghiệm</h2>
                     <div class="exam-controls">
                         <select id="exam-chapter-select">
-                            <option value="all">📚 Tất cả chương (348 câu)</option>
-                            <option value="exam/chuong_1.json">📘 Chương 1 (50 câu)</option>
-                            <option value="exam/chuong_2.json">📗 Chương 2 (148 câu)</option>
-                            <option value="exam/chuong_3.json">📙 Chương 3 (150 câu)</option>
+                            <option value="all">📚 Tất cả chương</option>
                         </select>
                         <input type="checkbox" id="shuffle-answers-toggle" checked>
                         <span>🔀 Trộn đáp án</span>
@@ -139,7 +136,7 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>Ôn tập miễn phí do sinh viên khoa Công nghệ thông tin - Trường Đại học Công nghệ Giao thông Vận tải tạo
+            <p>Ôn tập miễn phí do sinh viên Học viện Công nghệ Bưu chính Viễn thông tạo
                 ❤️</p>
             <p class="footer-disclaimer">Gemini có thể mắc sai lầm, các câu hỏi, đáp án và nội dung lý thuyết nên dừng
                 lại ở tham khảo</p>
