--- a/study.html
+++ b/study.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Học Tập với NotebookLM | Triết Học Mác-Lênin</title>
-    <meta name="description" content="Học tập Triết học Mác-Lênin với 8 chủ đề trọng tâm">
+    <title>Học Tập với NotebookLM | Pháp Luật Đại Cương</title>
+    <meta name="description" content="Học tập Pháp luật đại cương với 7 chủ đề trọng tâm">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-content">
-            <a href="index.html" class="logo">📚 Triết Học Mác-Lênin</a>
+            <a href="index.html" class="logo">⚖️ Pháp Luật Đại Cương</a>
             <button class="menu-toggle" id="menu-toggle" title="Menu">☰</button>
             <nav class="main-nav">
                 <a href="index.html" class="nav-tab">
@@ -58,7 +58,7 @@
             <aside class="study-sidebar" id="study-sidebar">
                 <div class="sidebar-header">
                     <h3>📚 Học tập với AI</h3>
-                    <span class="topic-count" id="topic-count">8 chủ đề</span>
+                    <span class="topic-count" id="topic-count">7 chủ đề</span>
                 </div>
                 <div class="topic-list" id="topic-list">
                     <!-- Topics rendered here -->
@@ -147,7 +147,7 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>Ôn tập miễn phí do sinh viên khoa Công nghệ thông tin - Trường Đại học Công nghệ Giao thông Vận tải tạo
+            <p>Ôn tập miễn phí do sinh viên Học viện Công nghệ Bưu chính Viễn thông tạo
                 ❤️</p>
             <p class="footer-disclaimer">Gemini có thể mắc sai lầm, các câu hỏi, đáp án và nội dung lý thuyết nên dừng
                 lại ở tham khảo</p>
