--- a/study.html
+++ b/study.html
@@ -147,8 +147,8 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>Ôn tập miễn phí do sinh viên Học viện Công nghệ Bưu chính Viễn thông tạo
-                ❤️</p>
+            <p>Ôn tập miễn phí do sinh viên trường Đại học Công nghệ Giao thông vận tải tạo và Học viện Công nghệ Bưu
+                chính Viễn thông hỗ trợ nội dung ❤️</p>
             <p class="footer-disclaimer">Gemini có thể mắc sai lầm, các câu hỏi, đáp án và nội dung lý thuyết nên dừng
                 lại ở tham khảo</p>
             <div style="margin-top: 12px;">
