feat: Introduce PDF processing and data generation scripts, modularize frontend JavaScript with common utilities and subject management, and update study, exam, and simulation pages.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <span class="tab-icon">📖</span>
                     <span class="tab-text">Học tập</span>
                 </a>
-                <a href="flashcard.html" class="nav-tab">
+                <!-- <a href="flashcard.html" class="nav-tab">
                     <span class="tab-icon">🎴</span>
                     <span class="tab-text">Flashcard</span>
-                </a>
+                </a> -->
                 <a href="exam.html" class="nav-tab">
                     <span class="tab-icon">📝</span>
                     <span class="tab-text">Thi thử</span>
@@ -85,7 +85,7 @@
                 </a>
 
                 <!-- Flashcard Feature -->
-                <a href="flashcard.html" class="feature-card flashcard">
+                <!-- <a href="flashcard.html" class="feature-card flashcard">
                     <div class="feature-icon">🎴</div>
                     <div class="feature-content">
                         <h3>Flashcard Ghi nhớ</h3>
@@ -94,7 +94,7 @@
                             lại ngắt quãng.</p>
                         <span class="feature-link">Lật thẻ ngay &rarr;</span>
                     </div>
-                </a>
+                </a> -->
 
                 <!-- Exam Feature -->
                 <a href="exam.html" class="feature-card exam">
