--- a/study.html
+++ b/study.html
@@ -28,10 +28,10 @@
                     <span class="tab-icon">📖</span>
                     <span class="tab-text">Học tập</span>
                 </a>
-                <a href="flashcard.html" class="nav-tab">
+                <!-- <a href="flashcard.html" class="nav-tab">
                     <span class="tab-icon">🎴</span>
                     <span class="tab-text">Flashcard</span>
-                </a>
+                </a> -->
                 <a href="exam.html" class="nav-tab">
                     <span class="tab-icon">📝</span>
                     <span class="tab-text">Thi thử</span>
