feat: Add version and update information to page footers.

--- a/study.html
+++ b/study.html
@@ -157,6 +157,11 @@
                     <span>👨‍💻</span> Liên hệ / Góp ý: HanitaVII
                 </a>
             </div>
+            <div class="footer-version" style="margin-top: 8px; font-size: 0.8rem; opacity: 0.7;">
+                <span>v1.2.0</span> •
+                <span>Updated: 29/12/2024</span> •
+                <span>Commit: ad64398</span>
+            </div>
         </div>
     </footer>
 
